@@ -2,6 +2,7 @@ New in version 1.6.0 (XXX 2014)
  * Update install-ubuntu-dependencies.sh for latest link-grammar
  * Dockerfile from Danny Brian.
  * Use maven to resolve dependencies, from Hendy Irawan.
+ * Remove support for OpenNLP version 1.4 and earlier.
 
 New in version 1.5.1 (3 April 2014)
  * Extensive fixes for comparatives, from Rodas Solomon.
